- Fix affichage landing page overflow

--- a/web/css/landing_page.css
+++ b/web/css/landing_page.css
@@ -4,6 +4,7 @@ footer {
 
 body {
     padding-bottom: 0;
+    overflow-y: hidden;
 }
 
 .btn__subscribe {
